--- a/talks/base/base.jinja2
+++ b/talks/base/base.jinja2
@@ -1,23 +1,20 @@
-{% extends "base.jinja2" %}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Demo</title>
+    <meta name="description" content="Reveal.js Demo">
+    <meta name="author" content="Hakim">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-{# HTML title #}
-{% set title = "Demo" %}
-{# Short description #}
-{% set description = "Reveal.js Demo" %}
-{# List of authors #}
-{% set author = "Hakim" %}
-{# Change ‘venue’ to a conference or workshop name if any #}
-{% set venue = "Reveal.js Demo" %}
-{# Publication info (hidden by default) #}
-{% set pub_datetime_iso = "2023-05-21" %}
-{% set pub_date = "May 21, 2023" %}
+      </head>
 
-{# Custom styles and JS for a particular talk #}
-{% block custom_head %}
-{% endblock %}
-
-{% block slides %}
-<section>
+  <body vocab="http://schema.org/" typeof="PresentationDigitalDocument">
+    <span property="publisher" style="display: none;">Reveal.js Demo</span>
+    <time pubdate property="datePublished" datetime="2023-05-21" style="display: none;">May 21, 2023</time>
+    <div class="reveal">
+        <div class="slides">
+            <section>
     <a href="https://revealjs.com">
         <img src="https://static.slid.es/reveal/logo-v1/reveal-white-text.svg" alt="reveal.js logo" style="height: 180px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
     </a>
@@ -54,4 +51,27 @@ asdfasdf
 						</a>
 					</section>
 				</section>
-{% endblock %}
+        </div>
+    </div>
+
+    <script type="module">
+    import 'reveal.js/dist/reset.css'
+    import 'reveal.js/dist/reveal.css'
+    import 'reveal.js/dist/theme/black.css'
+    import 'reveal.js/plugin/highlight/monokai.css'
+
+    import Markdown from 'reveal.js/plugin/markdown/markdown.esm.js';
+    import Notes from 'reveal.js/plugin/notes/notes.esm.js';
+    import Highlight from 'reveal.js/plugin/highlight/highlight.esm.js';
+    import Zoom from 'reveal.js/plugin/zoom/zoom.esm.js';
+    import Reveal from 'reveal.js';
+    Reveal.initialize({
+       controls: true,
+       progress: true,
+       center: true,
+       hash: true,
+       plugins: [ Markdown, Notes, Highlight, Zoom ]
+    });
+    </script>
+  </body>
+</html>
