talks: add themes to templates

--- a/talks/base/base.jinja2
+++ b/talks/base/base.jinja2
@@ -24,8 +24,8 @@
     <script type="module">
     import 'reveal.js/dist/reset.css'
     import 'reveal.js/dist/reveal.css'
-    import 'reveal.js/dist/theme/black.css'
-    import 'reveal.js/plugin/highlight/monokai.css'
+    {% block theme %}
+    {% endblock %}
     import Markdown from 'reveal.js/plugin/markdown/markdown.esm.js';
     import Notes from 'reveal.js/plugin/notes/notes.esm.js';
     import Highlight from 'reveal.js/plugin/highlight/highlight.esm.js';
