--- a/talks/talks/2023-plarch_edsl.jinja2
+++ b/talks/talks/2023-plarch_edsl.jinja2
@@ -32,6 +32,11 @@
 </style>
 {% endblock %}
 
+{% block theme %}
+import '/themes/white.scss'
+import 'reveal.js/plugin/highlight/monokai.css'
+{% endblock %}
+
 {% block slides %}
 <section>
   <h3>New Embedded DSLs for Hardware Design and Verification</h3>
