--- a/talks/talks/2023-plarch_mixed_hdl_and_hdl_design.jinja2
+++ b/talks/talks/2023-plarch_mixed_hdl_and_hdl_design.jinja2
@@ -32,6 +32,11 @@
 </style>
 {% endblock %}
 
+{% block theme %}
+import '/themes/white.scss'
+import 'reveal.js/plugin/highlight/monokai.css'
+{% endblock %}
+
 {% block slides %}
 <section>
 <h3>A Case for Mixed-Abstraction HDLs and a Discussion on Other Aspects of HDL Design</h3>
