--- a/talks/talks/demo.jinja2
+++ b/talks/talks/demo.jinja2
@@ -16,6 +16,11 @@
 {% block custom_head %}
 {% endblock %}
 
+{% block theme %}
+import '/themes/black.scss'
+import 'reveal.js/plugin/highlight/monokai.css'
+{% endblock %}
+
 {% block slides %}
 <section>
   <a href="https://revealjs.com">
