small fix to talk template base

--- a/talks/base/base.jinja2
+++ b/talks/base/base.jinja2
@@ -39,6 +39,7 @@
        hash: true,
        plugins: [ Markdown, Notes, Highlight, Zoom ]
     });
+    Reveal.configure({ pdfSeparateFragments: false });
     {% endblock %}
     </script>
   </body>
