--- a/talks/talks/2023_12-athlete_review-tidalsim_and_verif_apps.jinja2
+++ b/talks/talks/2023_12-athlete_review-tidalsim_and_verif_apps.jinja2
@@ -25,8 +25,8 @@ import 'reveal.js/plugin/highlight/monokai.css'
 
 {% block slides %}
 <section class="center">
-  <h1>TidalSim: Multi-Level Microarchitectural Simulation and Applications in Verification</h1>
-  <h2>Vighnesh Iyer, Raghav Gupta</h2>
+  <h1>TidalSim: Multi-Level Microarchitecture Simulation and Applications in Verification</h1>
+  <h2>Vighnesh Iyer, Raghav Gupta, Dhruv Vaish, Bora Nikolic, Sophia Shao</h2>
   <h3>ATHLETE Quarterly Review</h3>
   <h4>Monday, December 4th, 2023</h4>
 </section>
@@ -35,109 +35,159 @@ import 'reveal.js/plugin/highlight/monokai.css'
   <section>
     <h2 class="center">Motivation and Background</h2>
   </section>
+
   <section>
     <h2>Motivation</h2>
+
     <ul>
-      <li class="fragment">Fast design iteration and evaluation of PPA + verification requires stimulus that's representative and comprehensive wrt real workloads (execution fragments)
-        <ul class="fragment">
-          <li><em>Performance estimation:</em> </li>
-          <li><em>Power macromodeling:</em> </li>
-          <li><em>Verification:</em> Fuzzing bootstrap + coverage synthesis</li>
+      <li class="fragment">We want fast design iteration and evaluation of PPA + verification given real workloads
+      <!--Fast design iteration and evaluation of PPA + verification requires stimulus that's representative and comprehensive wrt real workloads (execution fragments)-->
+        <ul>
+          <li class="fragment"><em>Performance estimation:</em> Impact of μArch optimizations / HW parameters on real workloads</li>
+          <li class="fragment"><em>Power macromodeling:</em> Identification of important netlist nodes in power model + traces for training</li>
+          <li class="fragment"><em>Verification:</em> Bootstrapping fuzzing loops + coverpoint synthesis</li>
         </ul>
       </li>
-      <li class="fragment">The core of all of these is <em>fast and accurate simulation</em>
-        <ul class="fragment">
-          <li><em>Performance estimation:</em> perf metric extraction + extrapolation </li>
-          <li><em>Power macromodeling:</em> trace extraction!</li>
-          <li><em>Verification:</em> trace extraction + state seeding! </li>
+      <li class="fragment">The enablers are: <em>fast and accurate μArch simulation</em> and a way to identify <em>unique execution fragments</em>
+        <ul>
+          <li class="fragment"><em>Performance estimation:</em> Performance metric extraction from fast RTL simulation</li>
+          <li class="fragment"><em>Power macromodeling:</em> Extraction of interesting program traces for clustering/training</li>
+          <li class="fragment"><em>Verification:</em> Extraction of traces for coverpoint/specification synthesis + state seeding for fuzzing</li>
         </ul>
       </li>
     </ul>
-    <p class="center fragment">How do we do this (high throughput, high fidelity, low latency) microarchitectural simulation?</p>
+  </section>
+
+  <section>
+    <h2>Problem Overview</h2>
+
+    <p class="center fragment">Fast RTL-level μArch simulation and performance metric / interesting trace extraction</p>
+    <p class="center fragment"><em><strong>enables</strong></em></p>
+    <p class="center fragment">Rapid RTL iteration with performance, power modeling, and verification evaluation on real workloads</p>
+    <hr class="fragment">
+    <p class="center fragment">How can we achieve high throughput, high fidelity, low latency μArch simulation with RTL-level interesting trace extraction?</p>
+  </section>
+
+  <section>
+    <h2>Existing μArch Evaluation Strategies</h2>
+
+    <table style="width: 100%; font-size:90%;">
+      <thead><tr>
+        <th></th>
+        <th>Throughput</th>
+        <th>Latency</th>
+        <th>Fidelity</th>
+      </tr></thead>
+      <tbody><tr class="fragment">
+        <td>ISA Simulation</td>
+        <td class="bg-green">10-100+ MIPS</td>
+        <td class="bg-green">&lt;1 second</td>
+        <td class="bg-red">None</td>
+      </tr>
+      <tr class="fragment">
+        <td>μArch Perf Sim</td>
+        <td class="bg-orange">100 KIPS (gem5)</td>
+        <td class="bg-green">5-10 seconds</td>
+        <td class="bg-orange">5-10% avg IPC error</td>
+      </tr>
+      <tr class="fragment">
+        <td>RTL Simulation</td>
+        <td class="bg-red">1-10 KIPS</td>
+        <td class="bg-orange">5-10 minutes</td>
+        <td class="bg-green">cycle-exact</td>
+      </tr>
+      <tr class="fragment">
+        <td>FireSim (FPGA)</td>
+        <td class="bg-green">1-50 MIPS</td>
+        <td class="bg-red">2-6 hours</td>
+        <td class="bg-green">cycle-exact</td>
+      </tr>
+      <tr class="fragment">
+        <td><strong>TidalSim</strong></td>
+        <td>10 MIPS</td>
+        <td>&lt;1 minute</td>
+        <td style="font-size: 90%">&lt;5% error, 10k intervals</td>
+      </tr>
+      </tbody>
+    </table>
+
+    <ul style="margin-top: 1rem;" class="fragment">
+      <li>Combine the strengths of ISA, μArch, and RTL simulators
+        <ul><li>Multi-level simulation</li></ul>
+      </li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Phase Behavior of Programs</h2>
+
+    <div class="container">
+    <div>
+    <ul style="font-size:95%">
+      <li class="fragment" data-fragment-index="1">Program execution traces aren’t random
+        <ul class="fragment" data-fragment-index="2">
+          <li>They execute the same code again-and-again</li>
+          <li>Application execution traces can be split into <strong style="text-decoration:underline;">phases</strong> that exhibit similar μArch behavior</li>
+        </ul>
+      </li>
+      <li class="fragment" data-fragment-index="4">Prior work: SimPoint
+        <ul class="fragment" data-fragment-index="5">
+          <li>Identify basic blocks executed in a given interval (e.g. 1M instruction intervals)</li>
+          <li>Embed each interval using their ‘basic block vector’</li>
+          <li>Cluster intervals using k-means</li>
+        </ul>
+      </li>
+      <li class="fragment" data-fragment-index="6">Similar intervals → similar μArch behaviors
+        <ul class="fragment" data-fragment-index="7"><li>Only execute unique intervals in low-level RTL simulation!</li></ul>
+      </li>
+    </ul>
+    </div>
+    <div class="fragment" data-fragment-index="3">
+      <img src="./figs/multi-level-sim/simpoint-gzip_phases.gif" />
+      <img src="./figs/multi-level-sim/simpoint-gcc_phases.gif" />
+    </div>
+    </div>
+  </section>
+
+  <section>
+    <h2>Prior Work</h2>
+
+    <ul>
+      <li class="fragment"><em>Sampled</em> simulation techniques have been used in μArch simulators for decades
+        <ul>
+          <li class="fragment">SimPoint-style sampling (interval clustering, large intervals)</li>
+          <li class="fragment">SMARTs-style sampling (reservoir sampling, small intervals)</li>
+          <li class="fragment">Implemented in gem5, Sniper, ZSim, SST</li>
+        </ul>
+      </li>
+      <li class="fragment">LiveSim proposed 2-level simulation (ISA → μArch sim) for rapid iteration of μArch parameters
+        <ul>
+          <li>Functional warmup was used for the cache and branch predictor models</li>
+        </ul>
+      </li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>What's New</h2>
+
+    <ul>
+      <li class="fragment">No prior work on ISA ↔ uArch models ↔ RTL multi-level simulation with functional warmup</li>
+      <li class="fragment">No substantial work on binary-agnostic interval embeddings</li>
+      <li class="fragment">No one has leveraged the special collateral (waveforms + high-fidelity performance metrics) you can only get from RTL simulation</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Overview of Multi-Level Simulation Flow</h2>
+
+    <ul>
+
+    </ul>
   </section>
 </section>
 
-<section>
-  <h2>Microarchitecture Evaluation Strategies</h2>
 
-  <table style="width: 100%; font-size:90%;">
-    <thead><tr>
-      <th></th>
-      <th>Throughput</th>
-      <th>Latency</th>
-      <th>Fidelity</th>
-    </tr></thead>
-    <tbody><tr class="fragment">
-      <td>ISA Simulation</td>
-      <td class="bg-green">10-100+ MIPS</td>
-      <td class="bg-green">&lt;1 second</td>
-      <td class="bg-red">None</td>
-    </tr>
-    <tr class="fragment">
-      <td>uArch Perf Sim</td>
-      <td class="bg-orange">100 KIPS (gem5)</td>
-      <td class="bg-green">5-10 seconds</td>
-      <td class="bg-orange">5-10% avg IPC error</td>
-    </tr>
-    <tr class="fragment">
-      <td>RTL Simulation</td>
-      <td class="bg-red">1-10 KIPS</td>
-      <td class="bg-orange">5-10 minutes</td>
-      <td class="bg-green">cycle-exact</td>
-    </tr>
-    <tr class="fragment">
-      <td>FireSim (FPGA)</td>
-      <td class="bg-green">1-50 MIPS</td>
-      <td class="bg-red">2-6 hours</td>
-      <td class="bg-green">cycle-exact</td>
-    </tr>
-    <tr class="fragment">
-      <td><strong>Magic Box</strong></td>
-      <td>10 MIPS</td>
-      <td>&lt;1 minute</td>
-      <td style="font-size: 90%">&lt;5% error, 10k intervals</td>
-    </tr>
-    </tbody>
-  </table>
-
-  <ul style="margin-top: 1rem;" class="fragment">
-    <li>How do we build the magic box?</li>
-    <li>Leverage the strengths of ISA, uArch, and RTL simulators
-      <ul><li>Multi-level simulation</li></ul>
-    </li>
-  </ul>
-</section>
-
-<section>
-  <h2>Phase Behavior of Programs</h2>
-
-  <div class="container">
-  <div>
-  <ul style="font-size:95%">
-    <li class="fragment">Program execution traces aren’t random
-      <ul class="fragment">
-        <li>They execute the same code again-and-again</li>
-        <li>Application execution traces can be split into <strong style="text-decoration:underline;">phases</strong> that exhibit similar uArch behavior</li>
-      </ul>
-    </li>
-    <li class="fragment">Prior work: SimPoint
-      <ul class="fragment">
-        <li>Identify basic blocks executed in a given interval (e.g. 1M instruction intervals)</li>
-        <li>Embed each interval using their ‘basic block vector’</li>
-        <li>Cluster intervals using k-means</li>
-      </ul>
-    </li>
-    <li class="fragment">Similar intervals → similar uArch behaviors
-      <ul class="fragment"><li>Only execute unique intervals in low-level RTL simulation!</li></ul>
-    </li>
-  </ul>
-  </div>
-  <div>
-    <img src="./figs/multi-level-sim/simpoint-gzip_phases.gif" />
-    <img src="./figs/multi-level-sim/simpoint-gcc_phases.gif" />
-  </div>
-  </div>
-</section>
 
 <!--
 Break this slide into multiple parts
